fixed white border appearing on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 body{
     margin-bottom: 5%;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 0%;
 }
 
 header{
